# tg-cli-bridge

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.test  INSTALLATION.md  README.md  SECURITY.md  TROUBLESHOOTING.md  agent_manager.py  agent_memory.py  agent_registry.py  agent_skills.py  call_handler.py  cli.py  config.py  daily_report.py  docker-compose.yml  image_handler.py  instance_manager.py  memory_handler.py  playwright_handler.py  poller.py  proactive_worker.py  pyproject.toml  requirements.txt  research_handler.py  scheduler.py  screen_recorder.py  search_tg.py  server.py  session_store.py  setup_wizard.py  setup_wizard_ui.py  task_handler.py  task_orchestrator.py  task_utils.py  telegram_handler.py  (+8 more)
.github/workflows/: test.yml
.jules/: bolt.md  sentinel.md
bridgenet/: __init__.py  auth.py  borrow.py  client.py  config.py  credits.py  feed.py  permissions.py  relay_client.py  reputation.py  router.py  sanitizer.py
collab/: config.py  feed.py  router.py
docs/runners/: gemini.md
runners/: __init__.py  antigravity.py  base.py  claude.py  cli_router.py  codex.py  free.py  free_proxy.py  freecode.py  gemini.py  generic.py  openrouter.py  qwen.py
tests/: test_agent_manager.py  test_agent_registry.py  test_cli_router_pinning.py  test_config.py  test_instance_manager.py  test_router.py  test_server.py  test_task_handler.py  test_telegram_handler.py
whatsapp-bridge/: index.js  package-lock.json  package.json
