[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "bridgebot"
version = "0.1.0"
description = "Talk to any AI CLI through Telegram"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "httpx>=0.24.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
]

[project.scripts]
bridgebot = "cli:main"

[tool.setuptools]
py-modules = ["cli"]
